On Safari : fixing radiobutton input which was cut on the right side + hiding background-shapes on the form document page + fixing the width of the fixed header to see the entire "add" button which was cut on the right side

--- a/media/com_emundus_vue/app_emundus.css
+++ b/media/com_emundus_vue/app_emundus.css
@@ -792,9 +792,7 @@ select.em-select-no-border[data-v-6a1f127f] {
   position: fixed;
   display: flex;
   justify-content: space-between;
-  width: -webkit-fill-available;
-  width: -moz-available;
-  width: stretch;
+  width: calc(100% - 75px);
   background: var(--em-coordinator-bg);
   top: 72px;
   box-shadow: var(--em-box-shadow-x-1) var(--em-box-shadow-y-1) var(--em-box-shadow-blur-1) var(--em-box-shadow-color-1), var(--em-box-shadow-x-2) var(--em-box-shadow-y-2) var(--em-box-shadow-blur-2) var(--em-box-shadow-color-2), var(--em-box-shadow-x-3) var(--em-box-shadow-y-3) var(--em-box-shadow-blur-3) var(--em-box-shadow-color-3);
