--- a/templates/g5_helium/custom/scss/form.css
+++ b/templates/g5_helium/custom/scss/form.css
@@ -902,18 +902,20 @@
 
                     input {
                         accent-color: var(--em-form-radio-color-checked);
-                        width: var(--em-form-radio-width);
+                        width: 24px;
                         min-width: var(--em-form-radio-width);
                         height: var(--em-form-radio-height);
                         margin-right: var(--em-form-radio-margin-right);
-                        margin-left: 0;
                         margin-top: 2px;
+                        position: relative;
+                        left: 25px;
                     }
 
                     label {
                         cursor: pointer;
                         @apply tw-mb-0;
                         width: 100%;
+                        margin-left: 24px;
 
                         span {
                             word-wrap: break-word;
